# secpoline

./: .gitignore  CMakeLists.txt  README.md  TODO.md  sysbench.sh
benchmarks/: benchmark_cerberus.md  benchmark_endokernel.md  config.json  linux-6.12.0-full-cerberus.patch  run_coreutils.py
benchmarks/falco_benchmarks/: zip_bench.sh
benchmarks/microbench/: CMakeLists.txt  bench.cpp  bench_syscall.asm  config.h
debug_scripts/: process_symbols.py  utils.py  virt_pages.py
falco/: falco.yaml  falco_base.yaml  falco_rules.yaml
falco/cmake/modules/: falcosecurity-libs.cmake
falco_shim/: falco_shim.cpp  falco_shim.h
falco_shim/secpoline_plugin/: Makefile  secpoline_plugin.cpp
libproxysql/: Makefile  libproxysql1.patch
libproxysql/benchmark/: init_mysql_database.sh  sysbench.sh
proxysql/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  ProxySQL-3.0.4-Release-Notes.md  README.md  RELEASE_NOTES_WORKFLOW.md  docker-compose.yml  proxysql-ca.pem  proxysql-cert.pem  proxysql-key.pem  proxysql_notes.txt
proxysql/.github/ISSUE_TEMPLATE/: bug_report.md
proxysql/.github/workflows/: CI-3p-aiomysql.yml  CI-3p-pgjdbc.yml  CI-3p-php-pdo-pgsql.yml  CI-trigger.yml
proxysql/database/: proxysql-ca.pem  proxysql-cert.pem  proxysql-key.pem
proxysql/doc/: AI-DOCUMENTATION-FRAMEWORK.md  README.md  coredump_filters_documentation.md  killed_client_connections_documentation.md  query_rules_groups_documentation.md  tap_test_guide.md
proxysql/doc/ai-generated/: DOCUMENTATION-INDEX.md
proxysql/doc/ai-generated/architecture/: ARCHITECTURE-OVERVIEW.md  ENHANCEMENT-OPPORTUNITIES.md  PROJECT-LAYOUT.md  RELEASE-PIPELINE.md  TEST-PIPELINE.md  VISUAL-GUIDE.md
proxysql/doc/internal/: MySQL_Logging_Prepared_Statements_Parameters.md
proxysql/doc/ssl_keylog/: ssl_keylog_developer_guide.md  ssl_keylog_user_guide.md
proxysql/include/: Base_HostGroups_Manager.h  Base_Session.h  Base_Thread.h  GTID_Server_Data.h  MySQL_Data_Stream.h  MySQL_HostGroups_Manager.h  MySQL_Logger.hpp  MySQL_Monitor.hpp  MySQL_Protocol.h  MySQL_Query_Cache.h  MySQL_Query_Processor.h  MySQL_Session.h  MySQL_Thread.h  PgSQL_Backend.h  PgSQL_Connection.h  PgSQL_Data_Stream.h  PgSQL_ExplicitTxnStateMgr.h  PgSQL_Extended_Query_Message.h  PgSQL_HostGroups_Manager.h  PgSQL_Logger.hpp  PgSQL_Monitor.hpp  PgSQL_PreparedStatement.h  PgSQL_Protocol.h  PgSQL_Query_Cache.h  PgSQL_Query_Processor.h  PgSQL_Session.h  PgSQL_Set_Stmt_Parser.h  PgSQL_Thread.h  PgSQL_Variables.h  PgSQL_Variables_Validator.h  ProxySQL_Admin_Tables_Definitions.h  ProxySQL_Poll.h  ProxySQL_Statistics.hpp  Query_Cache.h  btree.h  c_tokenizer.h  gen_utils.h  makefiles_paths.mk  makefiles_vars.mk  proxysql_admin.h  (+9 more)
proxysql/lib/: Admin_Bootstrap.cpp  Admin_FlushVariables.cpp  Admin_Handler.cpp  Base_Session.cpp  Base_Thread.cpp  ClickHouse_Server.cpp  GTID_Server_Data.cpp  Makefile  MySQL_HostGroups_Manager.cpp  MySQL_Logger.cpp  MySQL_Monitor.cpp  MySQL_Protocol.cpp  MySQL_Query_Cache.cpp  MySQL_Query_Processor.cpp  MySQL_Session.cpp  MySQL_Set_Stmt_Parser.cpp  MySQL_Thread.cpp  MySQL_Variables.cpp  MySQL_encode.cpp  PgSQL_Backend.cpp  PgSQL_Connection.cpp  PgSQL_Data_Stream.cpp  PgSQL_ExplicitTxnStateMgr.cpp  PgSQL_Extended_Query_Message.cpp  PgSQL_HostGroups_Manager.cpp  PgSQL_Logger.cpp  PgSQL_Monitor.cpp  PgSQL_PreparedStatement.cpp  PgSQL_Protocol.cpp  PgSQL_Query_Processor.cpp  PgSQL_Session.cpp  PgSQL_Set_Stmt_Parser.cpp  PgSQL_Thread.cpp  PgSQL_Variables.cpp  PgSQL_Variables_Validator.cpp  ProxySQL_Admin.cpp  ProxySQL_Admin_Disk_Upgrade.cpp  ProxySQL_Admin_Stats.cpp  ProxySQL_Admin_Tests2.cpp  ProxySQL_Config.cpp  (+14 more)
proxysql/scripts/release-tools/: README.md  categorize_commits.py  category_mapping.example.json  collect_pr_data.py  fetch_prs_legacy.py  gen_changelog_legacy.py  gen_release_notes_legacy.py  generate_changelog.py  generate_release_notes.py  generate_structured_notes.py  orchestrate_release.py  parse_commits_legacy.py
proxysql/scripts/release-tools/examples/: CHANGELOG-3.0.4-commits.md  CHANGELOG-3.0.4-detailed.md  ProxySQL-3.0.4-Release-Notes-Enhanced.md  (+4 more)
proxysql/src/: Makefile  SQLite3_Server.cpp  libproxy_shim.cpp  main.cpp  proxy_tls.cpp
proxysql/test/: Makefile
proxysql/test/tap/: Makefile
proxysql/tools/: Makefile  eventlog_reader_to_json.cpp
secpoline_loader/: README.md  cmake_install.cmake
secpoline_loader/crt/: CMakeLists.txt
secpoline_loader/loader/: call_secpoline.c  cmake_install.cmake  dso.c  fix_debugger.c  get_mappings.c  ld_malloc.c  ld_malloc.h  loader.c  loader_secpoline.h  main.c
src/: libproxysql_shim.cpp  secpoline.cpp
src/include/: config.h  erim.h  gsreldata.h  hardware_breakpoints.h  kernel_sigaction.h  libproxysql.h  mpk_isolation.h  nolibc_util.h  secpoline.h  segfault_handler.h  signal_handlers.h  signals.h  sud.h  syscall_grouping.h  types.h  util.h  virt_page_manager.h  virtual_thread.h  virtualize_files.h  zpoline.h
src/secpoline_loader/: CMakeLists.txt  Makefile  basepath.h
src/secpoline_loader/loader/: CMakeLists.txt  asm_load_secpoline.asm  call_secpoline.c  dlfcn.c  dso.h  dynlink.c  env.c  get_mappings.c  load_secpoline.h  main.c
src/secpoline_loader/loader/include/: dlfcn.h
src/segfault_handler/: hardware_breakpoints.cpp  segfault_handler.cpp  signal_handler_entry.asm
src/syscall_handlers/: main_monitor.cpp  meta_monitor.cpp  virtualize_files.cpp  virtualize_maps.cpp
src/syscall_monitor/: asm_entry_points.asm  asm_syscall.asm  asm_syscall_hook.asm  erim.cpp  mpk_isolation.cpp  restore_selector_trampoline.asm  setup_new_thread.cpp  sud.cpp  vIrTuAlIzE_sIgNaLs.cpp  virt_page_manager.cpp  virtualize_threads.cpp  zpoline.cpp
tests/: main.cpp  seccomp_trap.cpp  test-tcc.c
tests/security_eval/: CMakeLists.txt  _libattack.cpp  _libattack.h  breakpoint_remap.cpp  cross_page.cpp  forged_signal.cpp  map_race.cpp  mremap.cpp  munmap.cpp  mutable_mappings.cpp  proc_mem.cpp  process_vm.cpp  rseq.cpp  scanning_race.cpp  seccomp.cpp  shared_memory.cpp  signal_delivery.cpp  sigreturn.cpp  sigreturn_race.cpp  syscall_miss.cpp  thread_breakpoint.cpp
(+105 files in other folders)
